add some new things

--- a/src/components/LoginCompo/login.css
+++ b/src/components/LoginCompo/login.css
@@ -26,7 +26,7 @@
     font-weight: 400;
     color: red;
 }
-.loginButton{
+.login-Button{
     width: 400px;
     height: 50px;
     display: flex;
