--- a/src/components/SignupCompo/signup.css
+++ b/src/components/SignupCompo/signup.css
@@ -3,7 +3,7 @@
     font-weight: 700;
     color: #fff;
 }
-.main-form label{
+.main_form label{
     font-size: 16px;
     font-weight: 400;
     @apply font-poppins;
@@ -11,7 +11,7 @@
     margin-bottom: 20px;
     display: inline-block;
 }
-.main-form input{
+.main_form input{
     width: 350px;
     height: 40px;
     border: 2px solid #4A6CD1 ;
@@ -19,7 +19,7 @@
     transition: all linear .3s;
     padding-left: 20px;
 }
-.main-form .error{
+.main_form .error{
     font-size: 14px ;
     font-weight: 400;
     color: red;
